EPIC-1/WX-104: implement time semantics helper and DST edge-case tests

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,4 +10,12 @@
 
   <artifactId>common</artifactId>
   <name>common</name>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
