EPIC-1/WX-105: ingest IEM CLI daily truth with idempotent upsert and tests

--- a/ingestion-service/src/main/resources/application.yml
+++ b/ingestion-service/src/main/resources/application.yml
@@ -14,3 +14,6 @@ logging:
 
 kalshi:
   base-url: https://api.elections.kalshi.com/trade-api/v2
+
+iem:
+  base-url: https://mesonet.agron.iastate.edu
