--- a/ingestion-service/src/main/resources/application-mysql.yml
+++ b/ingestion-service/src/main/resources/application-mysql.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/weather
+    url: jdbc:mysql://localhost:3306/weather_predictionmarkets?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: weather
-    password: weather
+    username: root
+    password: root
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
