--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "pandas==2.2.2",
+  "pyarrow==16.1.0",
   "numpy==1.26.4",
   "SQLAlchemy==2.0.32",
   "PyMySQL==1.1.1",
