--- a/ingestion-service/src/main/resources/application.yml
+++ b/ingestion-service/src/main/resources/application.yml
@@ -27,7 +27,7 @@ iem:
 
 gribstream:
   baseUrl: "https://gribstream.com"
-  apiToken: "${GRIBSTREAM_API_TOKEN:<PUT_TOKEN_HERE>}"
+  apiToken: "a379b700999ff2263bc5816c3ca21d25427ce5f7"
   authScheme: "${GRIBSTREAM_AUTH_SCHEME:Bearer}"
   connectTimeoutMillis: 5000
   readTimeoutMillis: 30000
