--- a/ingestion-service/src/main/resources/application.yml
+++ b/ingestion-service/src/main/resources/application.yml
@@ -53,6 +53,15 @@ gribstream:
       maxHorizonHours: 240
   gefs:
     members: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30]
+  transfer:
+    export:
+      output-path: gribstream_daily_feature.csv
+      page-size: 5000
+      include-header: true
+    import:
+      input-path: gribstream_daily_feature.csv
+      batch-size: 1000
+      has-header: true
 
 app:
   runners:
