--- a/ingestion-service/src/main/resources/application-mysql.yml
+++ b/ingestion-service/src/main/resources/application-mysql.yml
@@ -4,5 +4,9 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      transaction-isolation: TRANSACTION_READ_COMMITTED
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
